// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDialog already following card 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div
            class="toolbar--left"
          >
            <div
              class="cardDialog__toolbar-card-context"
            >
              <span
                class="cardDialog__toolbar-card-title"
              >
                title
              </span>
            </div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                aria-label="Stop following this card"
                title="Stop following this card"
                type="button"
              >
                <i
                  class="CompassIcon icon-bell-ring-outline"
                />
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="card-identity-wrapper"
          >
            <div
              class="EditableAreaWrap"
            >
              <textarea
                class="EditableArea Editable title"
                height="0"
                placeholder="Untitled"
                rows="1"
                spellcheck="true"
                title="title"
              >
                title
              </textarea>
              <div
                class="EditableAreaContainer"
              >
                <textarea
                  aria-hidden="true"
                  class="EditableAreaReference Editable title"
                  dir="auto"
                  disabled=""
                  rows="1"
                >
                  title
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="CardDetail__main-content"
          >
            <div
              class="CardDetail__left-section"
            >
              <div
                class="CardDetail CardDetail--fullwidth content-blocks"
              >
                <div
                  class="octo-content CardDetailContents"
                >
                  <div
                    class="octo-block"
                  >
                    <div
                      class="octo-block-margin"
                    />
                    <div
                      class="MarkdownEditor octo-editor  "
                    >
                      <div
                        class="octo-editor-preview octo-placeholder"
                        data-testid="preview-element"
                      >
                        <span />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="CardDetailContentsMenu content add-content"
                >
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper"
                    role="button"
                  >
                    <button
                      type="button"
                    >
                      <span>
                        Add content
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="CardRelations"
              >
                <div
                  class="CardRelations__header"
                >
                  <span
                    class="CardRelations__title"
                  >
                    Relations
                  </span>
                </div>
                <div
                  class="CardRelations__empty"
                >
                  No relations yet
                </div>
                <div
                  class="CardRelations__add"
                >
                  <button
                    class="CardRelations__add-button"
                  >
                    <i
                      class="CompassIcon icon-plus"
                    />
                    Add relation
                  </button>
                </div>
              </div>
            </div>
            <div
              class="CardDetail__right-section"
            >
              <div
                class="octo-propertylist CardDetailProperties"
              />
            </div>
          </div>
          <div
            class="CardDetail__comments-section"
          >
            <hr />
            <div
              class="CommentsList"
            >
              <div
                class="CommentsList__tabs"
              >
                <button
                  class="CommentsList__tab active"
                  type="button"
                >
                  Comments
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Card events
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Bot events
                </button>
              </div>
              <div
                class="CommentsList__new"
              >
                <input
                  multiple=""
                  style="display: none;"
                  type="file"
                />
                <div
                  class="newcomment-wrapper"
                >
                  <div
                    class="MarkdownEditor octo-editor newcomment active"
                  >
                    <div
                      class="MarkdownEditorInput"
                    >
                      <div
                        class="DraftEditor-root"
                      >
                        <div
                          class="DraftEditor-editorContainer"
                        >
                          <div
                            aria-autocomplete="list"
                            aria-expanded="false"
                            class="notranslate public-DraftEditor-content"
                            contenteditable="true"
                            role="combobox"
                            spellcheck="false"
                            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                          >
                            <div
                              data-contents="true"
                            >
                              <div
                                class=""
                                data-block="true"
                                data-editor="123"
                                data-offset-key="123-0-0"
                              >
                                <div
                                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                  data-offset-key="123-0-0"
                                >
                                  <span
                                    data-offset-key="123-0-0"
                                  >
                                    <br
                                      data-text="true"
                                    />
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="FormattingToolbar"
                      >
                        <button
                          aria-label="Bold"
                          title="Bold"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-bold"
                          />
                        </button>
                        <button
                          aria-label="Italic"
                          title="Italic"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-italic"
                          />
                        </button>
                        <button
                          aria-label="Strikethrough"
                          title="Strikethrough"
                          type="button"
                        >
                          <svg
                            class="StrikethroughIcon Icon"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M3 12h18v2H3v-2zm6.5-6c-1.1 0-2 .9-2 2h-2c0-2.2 1.8-4 4-4h5c2.2 0 4 1.8 4 4 0 1.5-.8 2.8-2 3.4v-2.2c.6-.3 1-.9 1-1.7 0-1.1-.9-2-2-2h-5c-.6 0-1 .4-1 1s.4 1 1 1h3v2h-4zm5 8c.6 0 1-.4 1-1h2c0 2.2-1.8 4-4 4h-5c-2.2 0-4-1.8-4-4 0-1.5.8-2.8 2-3.4v2.2c-.6.3-1 .9-1 1.7 0 1.1.9 2 2 2h5c.6 0 1-.4 1-1s-.4-1-1-1h-3v-2h4z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="Code"
                          title="Code"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-code-tags"
                          />
                        </button>
                        <div
                          class="FormattingToolbar__separator"
                        />
                        <button
                          aria-label="Link"
                          title="Link"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-link-variant"
                          />
                        </button>
                        <div
                          class="FormattingToolbar__separator"
                        />
                        <button
                          aria-label="Bullet list"
                          title="Bullet list"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-list-bulleted"
                          />
                        </button>
                        <button
                          aria-label="Numbered list"
                          title="Numbered list"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-list-numbered"
                          />
                        </button>
                        <button
                          aria-label="Quote"
                          title="Quote"
                          type="button"
                        >
                          <svg
                            class="QuoteIcon Icon"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M14 17h3l2-4V7h-6v6h3M6 17h3l2-4V7H5v6h3l-2 4z"
                            />
                          </svg>
                        </button>
                        <div
                          class="FormattingToolbar__separator"
                        />
                        <button
                          aria-label="Attach file"
                          title="Attach file"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-paperclip"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="CommentsList__divider"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog limited card shows hidden view (no toolbar) 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div
            class="toolbar--left"
          >
            <div
              class="cardDialog__toolbar-card-context"
            >
              <span
                class="cardDialog__toolbar-card-title"
              >
                title
              </span>
            </div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail  CardDetail--is-limited"
        >
          <div
            class="card-identity-wrapper"
          >
            <div
              class="EditableAreaWrap"
            >
              <textarea
                class="EditableArea Editable readonly title"
                height="0"
                placeholder="Untitled"
                readonly=""
                rows="1"
                spellcheck="true"
                title="title"
              >
                title
              </textarea>
              <div
                class="EditableAreaContainer"
              >
                <textarea
                  aria-hidden="true"
                  class="EditableAreaReference Editable readonly title"
                  dir="auto"
                  disabled=""
                  rows="1"
                >
                  title
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="CardDetail__limited-wrapper"
          >
            <span
              class="CardDetail__limited-bg"
            >
              <svg
                fill="none"
                height="521"
                viewBox="0 0 468 521"
                width="468"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                  y="48"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                  y="48"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                  y="96"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                  y="96"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                  y="144"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                  y="144"
                />
                <rect
                  fill="#3D3C40"
                  fill-opacity="0.16"
                  height="1"
                  width="468"
                  y="192"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="468"
                  y="209"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="468"
                  y="257"
                />
                <rect
                  fill="#3D3C40"
                  fill-opacity="0.16"
                  height="1"
                  width="468"
                  y="305"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="199"
                  rx="4"
                  width="468"
                  y="322"
                />
              </svg>
            </span>
            <p
              class="CardDetail__limited-title"
            >
              This card is hidden
            </p>
            <p
              class="CardDetail__limited-body"
            >
              Upgrade to our Professional or Enterprise plan to view archived cards, have unlimited views per boards, unlimited cards and more.
              <br />
              <a
                class="CardDetail__limited-link"
                role="button"
              >
                Learn more about our plans.
              </a>
            </p>
            <button
              type="button"
            >
              <span>
                Upgrade
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog return a cardDialog readonly 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div
            class="toolbar--left"
          >
            <div
              class="cardDialog__toolbar-card-context"
            >
              <span
                class="cardDialog__toolbar-card-title"
              >
                title
              </span>
            </div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                aria-label="Follow this card"
                title="Follow this card"
                type="button"
              >
                <i
                  class="CompassIcon icon-bell-outline"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="card-identity-wrapper"
          >
            <div
              class="EditableAreaWrap"
            >
              <textarea
                class="EditableArea Editable readonly title"
                height="0"
                placeholder="Untitled"
                readonly=""
                rows="1"
                spellcheck="true"
                title="title"
              >
                title
              </textarea>
              <div
                class="EditableAreaContainer"
              >
                <textarea
                  aria-hidden="true"
                  class="EditableAreaReference Editable readonly title"
                  dir="auto"
                  disabled=""
                  rows="1"
                >
                  title
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="CardDetail__main-content"
          >
            <div
              class="CardDetail__left-section"
            >
              <div
                class="CardDetail CardDetail--fullwidth content-blocks"
              >
                <div
                  class="octo-content CardDetailContents"
                >
                  <div
                    class="octo-block"
                  >
                    <div
                      class="octo-block-margin"
                    />
                  </div>
                </div>
              </div>
              <div
                class="CardRelations"
              >
                <div
                  class="CardRelations__header"
                >
                  <span
                    class="CardRelations__title"
                  >
                    Relations
                  </span>
                </div>
                <div
                  class="CardRelations__empty"
                >
                  No relations yet
                </div>
              </div>
            </div>
            <div
              class="CardDetail__right-section"
            >
              <div
                class="octo-propertylist CardDetailProperties"
              />
            </div>
          </div>
          <div
            class="CardDetail__comments-section"
          >
            <hr />
            <div
              class="CommentsList"
            >
              <div
                class="CommentsList__tabs"
              >
                <button
                  class="CommentsList__tab active"
                  type="button"
                >
                  Comments
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Card events
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Bot events
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog return cardDialog menu content 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div
            class="toolbar--left"
          >
            <div
              class="cardDialog__toolbar-card-context"
            >
              <span
                class="cardDialog__toolbar-card-title"
              >
                title
              </span>
            </div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                aria-label="Follow this card"
                title="Follow this card"
                type="button"
              >
                <i
                  class="CompassIcon icon-bell-outline"
                />
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper override menuOpened"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
              <div
                class="Menu noselect left "
              >
                <div
                  class="menu-contents"
                >
                  <div
                    class="menu-options"
                  >
                    <div>
                      <div
                        aria-label="Delete"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="menu-option__icon"
                          >
                            <i
                              class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                            />
                          </div>
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Delete
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        aria-label="Duplicate"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="menu-option__icon"
                          >
                            <i
                              class="CompassIcon icon-content-copy content-copy"
                            />
                          </div>
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Duplicate
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        aria-label="Copy link"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="menu-option__icon"
                          >
                            <i
                              class="CompassIcon icon-link-variant LinkIcon"
                            />
                          </div>
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Copy link
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        aria-label="Attach"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="menu-option__icon"
                          >
                            <i
                              class="CompassIcon icon-paperclip"
                            />
                          </div>
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Attach
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="menu-spacer hideOnWidescreen"
                  />
                  <div
                    class="menu-options hideOnWidescreen"
                  >
                    <div
                      aria-label="Cancel"
                      class="MenuOption TextOption menu-option menu-cancel"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          Cancel
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="card-identity-wrapper"
          >
            <div
              class="EditableAreaWrap"
            >
              <textarea
                class="EditableArea Editable title"
                height="0"
                placeholder="Untitled"
                rows="1"
                spellcheck="true"
                title="title"
              >
                title
              </textarea>
              <div
                class="EditableAreaContainer"
              >
                <textarea
                  aria-hidden="true"
                  class="EditableAreaReference Editable title"
                  dir="auto"
                  disabled=""
                  rows="1"
                >
                  title
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="CardDetail__main-content"
          >
            <div
              class="CardDetail__left-section"
            >
              <div
                class="CardDetail CardDetail--fullwidth content-blocks"
              >
                <div
                  class="octo-content CardDetailContents"
                >
                  <div
                    class="octo-block"
                  >
                    <div
                      class="octo-block-margin"
                    />
                    <div
                      class="MarkdownEditor octo-editor  "
                    >
                      <div
                        class="octo-editor-preview octo-placeholder"
                        data-testid="preview-element"
                      >
                        <span />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="CardDetailContentsMenu content add-content"
                >
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper"
                    role="button"
                  >
                    <button
                      type="button"
                    >
                      <span>
                        Add content
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="CardRelations"
              >
                <div
                  class="CardRelations__header"
                >
                  <span
                    class="CardRelations__title"
                  >
                    Relations
                  </span>
                </div>
                <div
                  class="CardRelations__empty"
                >
                  No relations yet
                </div>
                <div
                  class="CardRelations__add"
                >
                  <button
                    class="CardRelations__add-button"
                  >
                    <i
                      class="CompassIcon icon-plus"
                    />
                    Add relation
                  </button>
                </div>
              </div>
            </div>
            <div
              class="CardDetail__right-section"
            >
              <div
                class="octo-propertylist CardDetailProperties"
              />
            </div>
          </div>
          <div
            class="CardDetail__comments-section"
          >
            <hr />
            <div
              class="CommentsList"
            >
              <div
                class="CommentsList__tabs"
              >
                <button
                  class="CommentsList__tab active"
                  type="button"
                >
                  Comments
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Card events
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Bot events
                </button>
              </div>
              <div
                class="CommentsList__new"
              >
                <input
                  multiple=""
                  style="display: none;"
                  type="file"
                />
                <div
                  class="newcomment-wrapper"
                >
                  <div
                    class="MarkdownEditor octo-editor newcomment active"
                  >
                    <div
                      class="MarkdownEditorInput"
                    >
                      <div
                        class="DraftEditor-root"
                      >
                        <div
                          class="DraftEditor-editorContainer"
                        >
                          <div
                            aria-autocomplete="list"
                            aria-expanded="false"
                            class="notranslate public-DraftEditor-content"
                            contenteditable="true"
                            role="combobox"
                            spellcheck="false"
                            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                          >
                            <div
                              data-contents="true"
                            >
                              <div
                                class=""
                                data-block="true"
                                data-editor="123"
                                data-offset-key="123-0-0"
                              >
                                <div
                                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                  data-offset-key="123-0-0"
                                >
                                  <span
                                    data-offset-key="123-0-0"
                                  >
                                    <br
                                      data-text="true"
                                    />
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="FormattingToolbar"
                      >
                        <button
                          aria-label="Bold"
                          title="Bold"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-bold"
                          />
                        </button>
                        <button
                          aria-label="Italic"
                          title="Italic"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-italic"
                          />
                        </button>
                        <button
                          aria-label="Strikethrough"
                          title="Strikethrough"
                          type="button"
                        >
                          <svg
                            class="StrikethroughIcon Icon"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M3 12h18v2H3v-2zm6.5-6c-1.1 0-2 .9-2 2h-2c0-2.2 1.8-4 4-4h5c2.2 0 4 1.8 4 4 0 1.5-.8 2.8-2 3.4v-2.2c.6-.3 1-.9 1-1.7 0-1.1-.9-2-2-2h-5c-.6 0-1 .4-1 1s.4 1 1 1h3v2h-4zm5 8c.6 0 1-.4 1-1h2c0 2.2-1.8 4-4 4h-5c-2.2 0-4-1.8-4-4 0-1.5.8-2.8 2-3.4v2.2c-.6.3-1 .9-1 1.7 0 1.1.9 2 2 2h5c.6 0 1-.4 1-1s-.4-1-1-1h-3v-2h4z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="Code"
                          title="Code"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-code-tags"
                          />
                        </button>
                        <div
                          class="FormattingToolbar__separator"
                        />
                        <button
                          aria-label="Link"
                          title="Link"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-link-variant"
                          />
                        </button>
                        <div
                          class="FormattingToolbar__separator"
                        />
                        <button
                          aria-label="Bullet list"
                          title="Bullet list"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-list-bulleted"
                          />
                        </button>
                        <button
                          aria-label="Numbered list"
                          title="Numbered list"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-list-numbered"
                          />
                        </button>
                        <button
                          aria-label="Quote"
                          title="Quote"
                          type="button"
                        >
                          <svg
                            class="QuoteIcon Icon"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M14 17h3l2-4V7h-6v6h3M6 17h3l2-4V7H5v6h3l-2 4z"
                            />
                          </svg>
                        </button>
                        <div
                          class="FormattingToolbar__separator"
                        />
                        <button
                          aria-label="Attach file"
                          title="Attach file"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-paperclip"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="CommentsList__divider"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog return cardDialog menu content and cancel delete confirmation do nothing 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div
            class="toolbar--left"
          >
            <div
              class="cardDialog__toolbar-card-context"
            >
              <span
                class="cardDialog__toolbar-card-title"
              >
                title
              </span>
            </div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                aria-label="Follow this card"
                title="Follow this card"
                type="button"
              >
                <i
                  class="CompassIcon icon-bell-outline"
                />
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="card-identity-wrapper"
          >
            <div
              class="EditableAreaWrap"
            >
              <textarea
                class="EditableArea Editable title"
                height="0"
                placeholder="Untitled"
                rows="1"
                spellcheck="true"
                title="title"
              >
                title
              </textarea>
              <div
                class="EditableAreaContainer"
              >
                <textarea
                  aria-hidden="true"
                  class="EditableAreaReference Editable title"
                  dir="auto"
                  disabled=""
                  rows="1"
                >
                  title
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="CardDetail__main-content"
          >
            <div
              class="CardDetail__left-section"
            >
              <div
                class="CardDetail CardDetail--fullwidth content-blocks"
              >
                <div
                  class="octo-content CardDetailContents"
                >
                  <div
                    class="octo-block"
                  >
                    <div
                      class="octo-block-margin"
                    />
                    <div
                      class="MarkdownEditor octo-editor  "
                    >
                      <div
                        class="octo-editor-preview octo-placeholder"
                        data-testid="preview-element"
                      >
                        <span />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="CardDetailContentsMenu content add-content"
                >
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper"
                    role="button"
                  >
                    <button
                      type="button"
                    >
                      <span>
                        Add content
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="CardRelations"
              >
                <div
                  class="CardRelations__header"
                >
                  <span
                    class="CardRelations__title"
                  >
                    Relations
                  </span>
                </div>
                <div
                  class="CardRelations__empty"
                >
                  No relations yet
                </div>
                <div
                  class="CardRelations__add"
                >
                  <button
                    class="CardRelations__add-button"
                  >
                    <i
                      class="CompassIcon icon-plus"
                    />
                    Add relation
                  </button>
                </div>
              </div>
            </div>
            <div
              class="CardDetail__right-section"
            >
              <div
                class="octo-propertylist CardDetailProperties"
              />
            </div>
          </div>
          <div
            class="CardDetail__comments-section"
          >
            <hr />
            <div
              class="CommentsList"
            >
              <div
                class="CommentsList__tabs"
              >
                <button
                  class="CommentsList__tab active"
                  type="button"
                >
                  Comments
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Card events
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Bot events
                </button>
              </div>
              <div
                class="CommentsList__new"
              >
                <input
                  multiple=""
                  style="display: none;"
                  type="file"
                />
                <div
                  class="newcomment-wrapper"
                >
                  <div
                    class="MarkdownEditor octo-editor newcomment active"
                  >
                    <div
                      class="MarkdownEditorInput"
                    >
                      <div
                        class="DraftEditor-root"
                      >
                        <div
                          class="DraftEditor-editorContainer"
                        >
                          <div
                            aria-autocomplete="list"
                            aria-expanded="false"
                            class="notranslate public-DraftEditor-content"
                            contenteditable="true"
                            role="combobox"
                            spellcheck="false"
                            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                          >
                            <div
                              data-contents="true"
                            >
                              <div
                                class=""
                                data-block="true"
                                data-editor="123"
                                data-offset-key="123-0-0"
                              >
                                <div
                                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                  data-offset-key="123-0-0"
                                >
                                  <span
                                    data-offset-key="123-0-0"
                                  >
                                    <br
                                      data-text="true"
                                    />
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="FormattingToolbar"
                      >
                        <button
                          aria-label="Bold"
                          title="Bold"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-bold"
                          />
                        </button>
                        <button
                          aria-label="Italic"
                          title="Italic"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-italic"
                          />
                        </button>
                        <button
                          aria-label="Strikethrough"
                          title="Strikethrough"
                          type="button"
                        >
                          <svg
                            class="StrikethroughIcon Icon"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M3 12h18v2H3v-2zm6.5-6c-1.1 0-2 .9-2 2h-2c0-2.2 1.8-4 4-4h5c2.2 0 4 1.8 4 4 0 1.5-.8 2.8-2 3.4v-2.2c.6-.3 1-.9 1-1.7 0-1.1-.9-2-2-2h-5c-.6 0-1 .4-1 1s.4 1 1 1h3v2h-4zm5 8c.6 0 1-.4 1-1h2c0 2.2-1.8 4-4 4h-5c-2.2 0-4-1.8-4-4 0-1.5.8-2.8 2-3.4v2.2c-.6.3-1 .9-1 1.7 0 1.1.9 2 2 2h5c.6 0 1-.4 1-1s-.4-1-1-1h-3v-2h4z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="Code"
                          title="Code"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-code-tags"
                          />
                        </button>
                        <div
                          class="FormattingToolbar__separator"
                        />
                        <button
                          aria-label="Link"
                          title="Link"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-link-variant"
                          />
                        </button>
                        <div
                          class="FormattingToolbar__separator"
                        />
                        <button
                          aria-label="Bullet list"
                          title="Bullet list"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-list-bulleted"
                          />
                        </button>
                        <button
                          aria-label="Numbered list"
                          title="Numbered list"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-format-list-numbered"
                          />
                        </button>
                        <button
                          aria-label="Quote"
                          title="Quote"
                          type="button"
                        >
                          <svg
                            class="QuoteIcon Icon"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M14 17h3l2-4V7h-6v6h3M6 17h3l2-4V7H5v6h3l-2 4z"
                            />
                          </svg>
                        </button>
                        <div
                          class="FormattingToolbar__separator"
                        />
                        <button
                          aria-label="Attach file"
                          title="Attach file"
                          type="button"
                        >
                          <i
                            class="CompassIcon icon-paperclip"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="CommentsList__divider"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog should match snapshot 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div
            class="toolbar--left"
          >
            <div
              class="cardDialog__toolbar-card-context"
            >
              <span
                class="cardDialog__toolbar-card-title"
              >
                title
              </span>
            </div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                aria-label="Follow this card"
                title="Follow this card"
                type="button"
              >
                <i
                  class="CompassIcon icon-bell-outline"
                />
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="card-identity-wrapper"
          >
            <div
              class="EditableAreaWrap"
            >
              <textarea
                class="EditableArea Editable title"
                height="0"
                placeholder="Untitled"
                rows="1"
                spellcheck="true"
                title="title"
              >
                title
              </textarea>
              <div
                class="EditableAreaContainer"
              >
                <textarea
                  aria-hidden="true"
                  class="EditableAreaReference Editable title"
                  dir="auto"
                  disabled=""
                  rows="1"
                >
                  title
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="CardDetail__main-content"
          >
            <div
              class="CardDetail__left-section"
            >
              <div
                class="CardDetail CardDetail--fullwidth content-blocks"
              >
                <div
                  class="octo-content CardDetailContents"
                >
                  <div
                    class="octo-block"
                  >
                    <div
                      class="octo-block-margin"
                    />
                    <div
                      class="MarkdownEditor octo-editor  "
                    >
                      <div
                        class="octo-editor-preview octo-placeholder"
                        data-testid="preview-element"
                      >
                        <span />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="CardDetailContentsMenu content add-content"
                >
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper"
                    role="button"
                  >
                    <button
                      type="button"
                    >
                      <span>
                        Add content
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="CardRelations"
              >
                <div
                  class="CardRelations__header"
                >
                  <span
                    class="CardRelations__title"
                  >
                    Relations
                  </span>
                </div>
                <div
                  class="CardRelations__empty"
                >
                  No relations yet
                </div>
                <div
                  class="CardRelations__add"
                >
                  <button
                    class="CardRelations__add-button"
                  >
                    <i
                      class="CompassIcon icon-plus"
                    />
                    Add relation
                  </button>
                </div>
              </div>
            </div>
            <div
              class="CardDetail__right-section"
            >
              <div
                class="octo-propertylist CardDetailProperties"
              />
            </div>
          </div>
          <div
            class="CardDetail__comments-section"
          >
            <hr />
            <div
              class="CommentsList"
            >
              <div
                class="CommentsList__tabs"
              >
                <button
                  class="CommentsList__tab active"
                  type="button"
                >
                  Comments
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Card events
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Bot events
                </button>
              </div>
              <div
                class="CommentsList__new"
              >
                <input
                  multiple=""
                  style="display: none;"
                  type="file"
                />
                <div
                  class="newcomment-wrapper"
                >
                  <div
                    class="MarkdownEditor octo-editor newcomment active"
                  />
                </div>
              </div>
              <hr
                class="CommentsList__divider"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog should match snapshot without permissions 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div
            class="toolbar--left"
          >
            <div
              class="cardDialog__toolbar-card-context"
            >
              <span
                class="cardDialog__toolbar-card-title"
              >
                title
              </span>
            </div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                aria-label="Follow this card"
                title="Follow this card"
                type="button"
              >
                <i
                  class="CompassIcon icon-bell-outline"
                />
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="card-identity-wrapper"
          >
            <div
              class="EditableAreaWrap"
            >
              <textarea
                class="EditableArea Editable readonly title"
                height="0"
                placeholder="Untitled"
                readonly=""
                rows="1"
                spellcheck="true"
                title="title"
              >
                title
              </textarea>
              <div
                class="EditableAreaContainer"
              >
                <textarea
                  aria-hidden="true"
                  class="EditableAreaReference Editable readonly title"
                  dir="auto"
                  disabled=""
                  rows="1"
                >
                  title
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="CardDetail__main-content"
          >
            <div
              class="CardDetail__left-section"
            >
              <div
                class="CardDetail CardDetail--fullwidth content-blocks"
              >
                <div
                  class="octo-content CardDetailContents"
                >
                  <div
                    class="octo-block"
                  >
                    <div
                      class="octo-block-margin"
                    />
                  </div>
                </div>
              </div>
              <div
                class="CardRelations"
              >
                <div
                  class="CardRelations__header"
                >
                  <span
                    class="CardRelations__title"
                  >
                    Relations
                  </span>
                </div>
                <div
                  class="CardRelations__empty"
                >
                  No relations yet
                </div>
              </div>
            </div>
            <div
              class="CardDetail__right-section"
            >
              <div
                class="octo-propertylist CardDetailProperties"
              />
            </div>
          </div>
          <div
            class="CardDetail__comments-section"
          >
            <hr />
            <div
              class="CommentsList"
            >
              <div
                class="CommentsList__tabs"
              >
                <button
                  class="CommentsList__tab active"
                  type="button"
                >
                  Comments
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Card events
                </button>
                <button
                  class="CommentsList__tab "
                  type="button"
                >
                  Bot events
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
